# keepsake

./: .dsp_cache  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  effigy.toml
.agents/skills/effigy/: SKILL.md
.agents/skills/effigy/references/: agent-operating-loop.md  (+8 more)
.effigy/reports/doctor/: scan-attention-markers.md  scan-god-files.md
.github/workflows/: build.yml  release-binaries.yml
cmake/: DemoVst2GuiPlugin-Info.plist.in  Info.plist.in  TestPlugin-Info.plist.in  toolchain-linux-x86.cmake
demos/: effigy.demos.toml
docs/: README.md  demos.md  effigy.docs.toml  known-issues-v0.1-alpha.md  project-brief.md
docs/architecture/: README.md  macos-bridged-ui-options.md  product-guardrails.md  repo-authority-map.md  system-architecture.md  system-inventory.md
docs/contracts/: 001-working-rules.md  002-clap-factory-interface.md  004-ipc-bridge-protocol.md  006-process-isolation-policy.md  007-macos-native-editor-and-host-placeholder.md  README.md  contract-index.md
docs/logs/: README.md
docs/logs/2026-04/: 10-210000-g01-001-clap-factory-vst2-loader.md  10-214500-g01-002-audio-bridge-subprocess.md  10-220000-g01-003-cross-platform-cross-arch.md  10-223000-g01-004-scan-cache-config.md  10-225000-g01-005-midi-params-state.md  10-230000-g01-006-gui-forwarding.md  11-090000-g01-008-multi-format-loaders.md  11-091500-handoff-keepsake-thread-002.md  11-093000-g01-009-32-bit-bridge.md  12-141500-g02-003-alpha-primary-validation.md  12-165054-g02-004-alpha-candidate-artifact-smoke.md  12-204500-g02-003-linux-arm-vm-exploratory-validation.md  12-230500-g02-003-windows-arm-vm-exploratory-validation.md  13-223500-windows-vm-editor-handoff.md  14-091500-windows-apc-embed-thread-model.md  16-221500-mac-iosurface-embedded-ui-architecture-decision.md  16-233000-macos-live-editor-fallback-contract.md  16-235500-macos-live-editor-host-batch.md  16-235900-macos-live-editor-posture-closeout.md  16-235950-macos-live-x64-strap-closeout.md  17-064500-macos-live-editor-stabilization-cleanup.md  17-071000-macos-preview-lane-audit.md  17-073000-g02-001-alpha-scope-closeout.md  17-073558-g02-002-release-surface-closeout.md  17-074232-g02-003-alpha-evidence-refresh.md  17-075000-g02-004-release-artifact-proof.md  17-080000-v0.1-alpha-release-checkpoint.md  17-081500-g03-post-alpha-rollover.md  17-113000-demo-proof-stack-and-operator-shortcut.md  20-001500-windows-release-claim-correction.md  handoff-keepsake-thread-001.md
docs/logs/2026-07/: 15-123000-macos-x64-editor-hosting-research.md  15-132500-screencapturekit-iosurface-metal-proof.md  15-162700-soundcheck-companion-inspection-integration.md  16-114200-macos-native-editor-placeholder-refocus.md
docs/logs/templates/: release-checkpoint-template.md
docs/policy/: internal-writing-style.md  vision-next-task-verbs.txt
docs/releases/: README.md  v0.1-alpha-publish-checklist.md  v0.1-alpha-validation-matrix.md  v0.1-alpha.md
docs/roadmaps/: README.md  generation-index.md
docs/roadmaps/backlog/: 001-macos-preview-lane-disposition.md  README.md
docs/roadmaps/g01/: 001-clap-factory-and-vst2-loader-poc.md  002-audio-bridge-and-subprocess-isolation.md  003-cross-platform-and-cross-architecture.md  004-scan-cache-and-configuration.md  005-midi-params-and-state.md  006-gui-forwarding.md  007-ci-and-cross-platform-testing.md  008-vst3-and-au-loaders.md  009-32-bit-bridge.md  010-configurable-process-isolation.md  011-editor-header-bar.md  012-windows-linux-gui.md  013-embedded-editors.md  014-scan-robustness.md  015-codebase-health.md  016-soundcheck-integration.md  017-iosurface-embedded-editors.md  README.md
docs/roadmaps/g02/: 001-alpha-scope-claims-and-docs.md  002-release-packaging-versioning-install-surface.md  003-alpha-validation-matrix-and-evidence.md  004-publish-v0.1-alpha.md  005-macos-ui-model-and-fallback-prototype.md  README.md
docs/roadmaps/g03/: 001-post-alpha-stabilization-and-claim-corrections.md  README.md
docs/roadmaps/templates/: roadmap-milestone-template.md
docs/setup/: README.md  building.md  config-reference.md  linux.md  macos.md  troubleshooting.md  windows.md
docs/specs/: README.md
docs/specs/archive/: README.md
docs/specs/batch-cards/: README.md
docs/specs/templates/: batch-card-template.md  master-spec-template.md
docs/vision/: 001-keepsake-vision.md  README.md
release/: effigy.release.toml
scripts/: README.md
src/: bridge_gui.h  bridge_gui_mac.mm  bridge_gui_mac_internal.h  bridge_gui_mac_iosurface.mm  bridge_gui_mac_window.mm  bridge_gui_mac_window_views.mm  bridge_gui_stub.cpp  bridge_gui_stub_linux.cpp  bridge_gui_stub_windows.cpp  bridge_loader.h  bridge_loader_au.mm  bridge_loader_factory.cpp  bridge_loader_vst2.cpp  bridge_loader_vst2_platform.cpp  bridge_loader_vst3.cpp  bridge_loader_vst3_internal.h  bridge_loader_vst3_lifecycle.cpp  bridge_loader_vst3_module.cpp  bridge_main.cpp  bridge_pool.cpp  bridge_pool.h  bridge_runtime.cpp  bridge_runtime.h  bridge_runtime_audio.cpp  bridge_runtime_init.cpp  config.cpp  config.h  config_cache.cpp  config_internal.h  debug_log.h  factory.cpp  factory.h  factory_helpers.cpp  factory_internal.h  factory_scan.cpp  ipc.h  mac_editor_notification.h  main.cpp  platform.h  platform_io.h  (+30 more)
tasks/: effigy.tasks.toml
tools/: bridge-pipe-close-test.cpp  bridge-test.cpp  clap-scan.cpp  config-cache-test.cpp  demo-asset-path.sh  demo-capture.sh  demo-vst2-gui-plugin.mm  host-probe-clap.cpp  host-test-threaded.cpp  host-test.cpp  host_test_support.h  keepsake-scan.cpp  mac-clap-host.mm  reaper-smoke-lib.sh  reaper-smoke-multi.lua  reaper-smoke-multi.ps1  reaper-smoke.lua  reaper-smoke.ps1  reaper-smoke.sh  release-candidate.sh  test-plugin.cpp  vst2-string-buffer-test.cpp  windows-build-bridge32.cmd  windows-clap-host.cpp  windows-clap-host.ps1  windows-dump-debug.cmd  windows-host-probe.ps1  windows-install-built.ps1  windows-reaper-smoke.cmd  windows-register-install-task.ps1  windows-run-install-task.ps1  windows-run.cmd  windows-update-install.cmd  windows-vst2-probe.cpp  windows-vst2-probe.ps1
